cargo-features = ["codegen-backend"]

[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["default_font", "dynamic_linking"] }
bevy_rapier2d = "0.27.0"
rand = "0.8.5"

[profile.release]
codegen-units = 1
lto = "thin"

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"
