cargo-features = ["codegen-backend"]

[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["default_font"] }
rand = "0.8.5"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
[profile.release]
codegen-units = 1
lto = "thin"

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"
